# wdsgf

./: .gitignore  LICENSE  wdsgf.cabal
src/: Main.hs
