name:                wdsgf
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/lesguillemets/wdsgf
license:             MIT
license-file:        LICENSE
author:              lesguillemets
maintainer:          kgkacko+github@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable wdsgf
  main-is:             Main.hs
  other-modules:       Const
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , bytestring
                     , http-conduit
                     , http-types
                     , regex-tdfa
  hs-source-dirs:      src
  default-language:    Haskell2010
